Tranfer to qwen3 instead of llama2

--- a/addon/chrome/content/preferences.xhtml
+++ b/addon/chrome/content/preferences.xhtml
@@ -44,9 +44,9 @@
             id="ollama-model"
             type="text"
             style="width: 100%; padding: 5px;"
-            placeholder="llama2"/>
+            placeholder="qwen3:4b"/>
         <html:div style="font-size: 11px; color: #666; margin-top: 3px;">
-          The Ollama model to use (e.g., llama2, mistral, codellama)
+          The Ollama model to use (e.g., qwen3:4b, llama2, mistral, codellama)
         </html:div>
       </html:div>
 
@@ -88,7 +88,8 @@
         <html:p><html:strong>2. Pull a Model:</html:strong></html:p>
         <html:ul>
           <html:li>Open Terminal</html:li>
-          <html:li>Run: <html:code style="background: #f0f0f0; padding: 2px 5px;">ollama pull llama2</html:code></html:li>
+          <html:li>Run: <html:code style="background: #f0f0f0; padding: 2px 5px;">ollama pull qwen3:4b</html:code></html:li>
+          <html:li>Or any other model: <html:code style="background: #f0f0f0; padding: 2px 5px;">ollama pull llama2</html:code></html:li>
         </html:ul>
 
         <html:p><html:strong>3. Server Management:</html:strong></html:p>
